# aegis-llm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
configs/: gateway.example.toml
docs/adr/: ADR-001-rust-axum.md  ADR-002-3tier-auth.md  ADR-003-injection-detection.md
src/: audit.rs  auth.rs  config.rs  langfuse.rs  lib.rs  main.rs  memory.rs  metrics.rs  model_policy.rs  proxy.rs  responses_adapter.rs  router.rs  security.rs
