[package]
name = "aegis-llm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "AegisLLM: security-first API gateway and proxy for LLM endpoints"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
bytes = "1.6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
http = "1.1"
http-body-util = "0.1"
jsonwebtoken = "9.3"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "fs", "process"] }
tokio-util = "0.7"
toml = "0.8"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.10"
